# rwa3_Robot_Programming

bot_waypoint_msgs/: CMakeLists.txt  package.xml
bot_waypoint_msgs/msg/: BotWaypoint.msg
group6_rwa5/: CMakeLists.txt  package.xml
group6_rwa5/include/group6_rwa5/: waypoint_publisher.hpp  waypoint_reacher.hpp
group6_rwa5/src/: main.cpp  waypoint_publisher.cpp  waypoint_reacher.cpp
src/group6_rwa4/: CMakeLists.txt  package.xml
src/group6_rwa4/include/group6_rwa4/: bot_sequence.hpp
src/group6_rwa4/src/: bot_sequence.cpp  main.cpp
